--- a/vm-executor-wasmer/Cargo.toml
+++ b/vm-executor-wasmer/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "dharitri-chain-vm-executor-wasmer"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 publish = false # will also be published, but it is not yet ready for that
 
 [lib]
 
-[dependencies]
-dharitri-chain-vm-executor = { path = "../vm-executor" }
+[dependencies.dharitri-chain-vm-executor]
+version = "0.4.0"
+path = "../vm-executor"
 
+[dependencies]
 wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "cdd1550", default-features = false, features = [
     "singlepass",
     "sys",
